k8/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-deployment
  # namespace: hospital-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth_service
  
  template:
    metadata:
      labels:
        app: auth_service
    spec:
      containers:
      - name: auth
        image: netflams10/auth-service
        ports:
        - containerPort: 3000
