k8/auth-service-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-cluster-ip
  # namespace: hospital-microservice
spec:
  type: ClusterIP
  selector:
    app: auth_service
  ports:
    - port: 3000
      targetPort: 3000
