k8/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-service
  # namespace: hospital-microservice
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: 
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: auth-service-cluster-ip
                port: 
                  number: 3000
          # - paths: /auth/
          #   backend:
          #     serviceName: auth-service-cluster-ip
          #     servicePort: 3000
